--- a/.github/workflows/onedrive-to-github.yml
+++ b/.github/workflows/onedrive-to-github.yml
@@ -18,10 +18,10 @@ jobs:
         run: |
           # Set your OneDrive access token and folder path
           ONEDRIVE_ACCESS_TOKEN="${{ secrets.ONEDRIVE_ACCESS_TOKEN }}"
-          FOLDER_PATH="01KWR5ZX2PEZYK2OZVPFFLVJGAPE4RYQEU"  # Change to your folder path
+          FOLDER_PATH="Documents/BKC/BKC Input Images"  # Change to your folder path
 
           # Fetch images from OneDrive
-          response=$(curl -s -X GET "https://graph.microsoft.com/v1.0/me/drive/items/$FOLDER_ID/children" \
+          response=$(curl -s -X GET "https://graph.microsoft.com/v1.0/me/drive/root:/$FOLDER_PATH:/children" \
             -H "Authorization: Bearer $ONEDRIVE_ACCESS_TOKEN")
 
           # Print the response for debugging
