--- a/.github/workflows/onedrive-to-github.yml
+++ b/.github/workflows/onedrive-to-github.yml
@@ -18,7 +18,7 @@ jobs:
         run: |
           # Set your OneDrive access token and folder path
           ONEDRIVE_ACCESS_TOKEN="${{ secrets.ONEDRIVE_ACCESS_TOKEN }}"
-          FOLDER_PATH="Documents/BKC/BKC Input Images"  # Change to your folder path
+          FOLDER_PATH="Documents/BKC/BKC%20Input%20Images"  # Change to your folder path
 
           # Fetch images from OneDrive
           response=$(curl -s -X GET "https://graph.microsoft.com/v1.0/me/drive/root:/$FOLDER_PATH:/children" \
