--- a/.github/workflows/onedrive-to-github.yml
+++ b/.github/workflows/onedrive-to-github.yml
@@ -18,10 +18,10 @@ jobs:
         run: |
           # Set your OneDrive access token and folder path
           ONEDRIVE_ACCESS_TOKEN="${{ secrets.ONEDRIVE_ACCESS_TOKEN }}"
-          FOLDER_PATH="Documents/BKC/BKC%20Input%20Images"  # Change to your folder path
+          # FOLDER_PATH="Documents/BKC/BKC%20Input%20Images"  # Change to your folder path
 
           # Fetch images from OneDrive
-          response=$(curl -s -X GET "https://graph.microsoft.com/v1.0/users/998e6817-e81a-4c40-a387-34c1ab27b201/drive/root:/$FOLDER_PATH:/children" \
+          response=$(curl -s -X GET "https://graph.microsoft.com/v1.0/users/998e6817-e81a-4c40-a387-34c1ab27b201/drive/items/01KWR5ZX2PEZYK2OZVPFFLVJGAPE4RYQEU/children" \
             -H "Authorization: Bearer $ONEDRIVE_ACCESS_TOKEN")
 
           # Print the response for debugging
