Update onedrive-to-github.yml d

--- a/.github/workflows/onedrive-to-github.yml
+++ b/.github/workflows/onedrive-to-github.yml
@@ -35,13 +35,17 @@ jobs:
           
           # Download images
           mkdir -p downloaded_images
-          while read -r url; do
+          while read -r url name; do
               # Extract the base name from the URL
-              filename=$(basename "$url")
+              # filename=$(basename "$url")
               
               # Sanitize the filename by limiting length and removing special characters
-              sanitized_filename=$(echo "$filename" | tr -dc '[:alnum:]._-' | cut -c1-50)
-
+              # sanitized_filename=$(echo "$filename" | tr -dc '[:alnum:]._-' | cut -c1-50)
+              ######################################################################################################
+              extension="${name##*.}"  # Get the file extension
+              sanitized_filename=$(echo "$name" | tr -dc '[:alnum:]._-' | cut -c1-30)  # Limit to 30 characters
+              sanitized_filename="$sanitized_filename.$extension"
+              ##############################################################################################
               # Download the image
               if curl -L -o "downloaded_images/$sanitized_filename" "$url"; then
                   echo "Downloaded: $sanitized_filename"
