--- a/.github/workflows/onedrive-to-github.yml
+++ b/.github/workflows/onedrive-to-github.yml
@@ -35,18 +35,13 @@ jobs:
           
           # Download images
           mkdir -p downloaded_images
-          while read -r url name; do
-              Extract the base name from the URL
+          while read -r url; do
+              # Extract the base name from the URL
               filename=$(basename "$url")
               echo "URL: $filename"
-              Sanitize the filename by limiting length and removing special characters
+              # Sanitize the filename by limiting length and removing special characters
               sanitized_filename=$(echo "$filename" | tr -dc '[:alnum:]._-' | cut -c1-50)
-              
-              ######################################################################################################
-              # extension="${name##*.}"  # Get the file extension
-              # sanitized_filename=$(echo "$name" | tr -dc '[:alnum:]._-' | cut -c1-30)  # Limit to 30 characters
-              # sanitized_filename="$sanitized_filename.$extension"
-              ##############################################################################################
+
               # Download the image
               if curl -L -o "downloaded_images/$sanitized_filename" "$url"; then
                   echo "Downloaded: $sanitized_filename"
