--- a/.github/workflows/onedrive-to-github.yml
+++ b/.github/workflows/onedrive-to-github.yml
@@ -27,8 +27,8 @@ jobs:
 
           # Parse image URLs safely
           urls=$(echo "$response" | jq -r '.value[] | select(.file) | .["@microsoft.graph.downloadUrl"] // empty')
-          names=$(echo "$response" | jq -r '.value[] | select(.file) | .[name] // empty')
-          if [[ -z "$urls" ]]; then
+          names=$(echo "$response" | jq -r '.value[] | select(.file) | .name // empty')
+          if [[ -z "$urls" || -z "$names" ]]; then
               echo "No images found or error in fetching images."
               exit 1
           fi
@@ -36,14 +36,14 @@ jobs:
           
           # Download images
           mkdir -p downloaded_images
-          while read -r url names; do
+          while read -r url name; do
               # Extract the base name from the URL
               filename=$(basename "$url")
-              echo "NAME: $names"
+              echo "NAME: $name"
               extension="${name##*.}"
               echo "EXTENSION: $extension"
               # Sanitize the filename by limiting length and removing special characters
-              sanitized_filename=$(echo "$filename" | tr -dc '[:alnum:]._-' | cut -c1-50)
+              sanitized_filename=$(echo "$name" | tr -dc '[:alnum:]._-' | cut -c1-50)
 
               # Download the image
               if curl -L -o "downloaded_images/$sanitized_filename" "$url"; then
