--- a/.github/workflows/get-access-token.yml
+++ b/.github/workflows/get-access-token.yml
@@ -1,11 +1,15 @@
-name: Get Access Token
+name: Sync OneDrive Images to GitHub
 
 on:
-  workflow_dispatch: # Allows manual triggering of the workflow
+  workflow_dispatch:
+  schedule:
+    - cron: '0 11 * * 2,3'  # Runs every Tuesday at 11 AM UTC
 
 jobs:
-  request_access_token:
+  get_access_token:
     runs-on: ubuntu-latest
+    outputs:
+      access_token: ${{ steps.get_token.outputs.access_token }}
 
     steps:
       - name: Request Access Token
@@ -15,12 +19,63 @@ jobs:
             -H "Content-Type: application/x-www-form-urlencoded" \
             -d "client_id=91597372-2261-4f87-9238-10af1457aeef&client_secret=ku.8Q~hgoBkxloBJC6ZVszUhFUleZWdQUmJibctx&scope=https://graph.microsoft.com/.default&grant_type=client_credentials")
           
-          # Extract access token from the response using jq
+          # Extract the access token from the response
           access_token=$(echo "$response" | jq -r '.access_token')
-          
-          # Store the token in an environment variable for the job
-          echo "access_token=$access_token" >> $GITHUB_ENV
+          echo "::set-output name=access_token::$access_token"
 
-      - name: Display Access Token
+  sync:
+    runs-on: ubuntu-latest
+    needs: get_access_token
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Fetch images from OneDrive
+        id: fetch_images
         run: |
-          echo "Access Token: ${{ env.access_token }}"
+          # Fetch images from OneDrive using the dynamically obtained access token
+          response=$(curl -s -X GET "https://graph.microsoft.com/v1.0/users/998e6817-e81a-4c40-a387-34c1ab27b201/drive/items/01KWR5ZX2PEZYK2OZVPFFLVJGAPE4RYQEU/children" \
+            -H "Authorization: Bearer ${{ needs.get_access_token.outputs.access_token }}")
+
+          echo "$response" > response_log.txt
+
+          # Parse image URLs and names safely
+          urls=$(echo "$response" | jq -r '.value[] | select(.file) | .["@microsoft.graph.downloadUrl"] // empty')
+          names=$(echo "$response" | jq -r '.value[] | select(.file) | .name // empty')
+          echo "ALL names: $names"
+          echo "ALL urls: $urls"
+          if [[ -z "$urls" || -z "$names" ]]; then
+              echo "No images found or error in fetching images."
+              exit 1
+          fi
+
+          # Download images
+          mkdir -p downloaded_images
+          paste <(echo "$urls") <(echo "$names") | while IFS=$'\t' read -r url name; do
+              # Sanitize filename
+              sanitized_filename=$(echo "$name" | tr -dc '[:alnum:]._-')
+              sanitized_filename=$(echo "$sanitized_filename" | cut -c1-100)  # Limit to 100 characters
+
+              # Download the image
+              if curl -L -o "downloaded_images/$sanitized_filename" "$url"; then
+                  echo "Downloaded: $sanitized_filename"
+              else
+                  echo "Failed to download: $url"
+              fi
+          done
+
+      - name: Commit images to GitHub
+        run: |
+          git config --local user.name "biteam2024"
+          git config --local user.email "bi.analytics@arthdesignbuild.com"
+          if [ -n "$(ls -A downloaded_images)" ]; then
+              git add downloaded_images/*
+              git commit -m "Add images from OneDrive"
+              git push
+          else
+              echo "No new images to add."
+          fi
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # GitHub token for pushing changes
+
