--- a/.github/workflows/get-access-token.yml
+++ b/.github/workflows/get-access-token.yml
@@ -1,42 +1,35 @@
-name: Get access token || Push images
+name: Get Access Token and Sync OneDrive Images to GitHub
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 11 * * 2,3'  # Runs every Tuesday at 11 AM UTC
+    - cron: '0 11 * * 2,3'  # Runs every Tuesday and Wednesday at 11:00 AM UTC
 
 jobs:
   get_access_token:
     runs-on: ubuntu-latest
     outputs:
-      access_token: ${{ steps.get_token.outputs.access_token }}
+      access_token: ${{ steps.get_token.outputs.access_token }}  # Makes the access token available to other jobs
 
     steps:
       - name: Request Access Token
         id: get_token
         run: |
-          # Make the request to get the access token
           response=$(curl -X POST "https://login.microsoftonline.com/96f98c92-0eac-40be-80a7-9c8224a25a66/oauth2/v2.0/token" \
             -H "Content-Type: application/x-www-form-urlencoded" \
             -d "client_id=91597372-2261-4f87-9238-10af1457aeef&client_secret=ku.8Q~hgoBkxloBJC6ZVszUhFUleZWdQUmJibctx&scope=https://graph.microsoft.com/.default&grant_type=client_credentials")
 
-          # Print the full response for debugging purposes
-          echo "Full response: $response"
-
-          # Check if the response contains an access token
-          if echo "$response" | jq -e '.access_token' >/dev/null; then
-            access_token=$(echo "$response" | jq -r '.access_token')
-            # Use the new environment file method to set the output
-            echo "access_token=$access_token" >> $GITHUB_ENV
-          else
-            echo "Error: Failed to retrieve access token. Response: $response"
+          # Extract access token from response and handle errors
+          access_token=$(echo "$response" | jq -r '.access_token')
+          if [ -z "$access_token" ] || [ "$access_token" == "null" ]; then
+            echo "Failed to retrieve access token. Full response: $response"
             exit 1
           fi
+          echo "::set-output name=access_token::$access_token"
 
   sync:
     runs-on: ubuntu-latest
-    needs: get_access_token
-
+    needs: get_access_token  # Ensure this job waits for token retrieval
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -44,13 +37,16 @@ jobs:
       - name: Fetch images from OneDrive
         id: fetch_images
         run: |
-          # Fetch images from OneDrive using the dynamically obtained access token
+          # Use the access token retrieved from the previous job
+          access_token="${{ needs.get_access_token.outputs.access_token }}"
+
+          # Fetch images from OneDrive using the access token
           response=$(curl -s -X GET "https://graph.microsoft.com/v1.0/users/998e6817-e81a-4c40-a387-34c1ab27b201/drive/items/01KWR5ZX2PEZYK2OZVPFFLVJGAPE4RYQEU/children" \
-            -H "Authorization: Bearer ${{ needs.get_access_token.outputs.access_token }}")
+            -H "Authorization: Bearer $access_token")
 
-          echo "$response" > response_log.txt
+          echo "$response" > response_log.txt  # Save response for debugging
 
-          # Parse image URLs and names safely
+          # Parse image URLs and names
           urls=$(echo "$response" | jq -r '.value[] | select(.file) | .["@microsoft.graph.downloadUrl"] // empty')
           names=$(echo "$response" | jq -r '.value[] | select(.file) | .name // empty')
           echo "ALL names: $names"
@@ -63,7 +59,6 @@ jobs:
           # Download images
           mkdir -p downloaded_images
           paste <(echo "$urls") <(echo "$names") | while IFS=$'\t' read -r url name; do
-              # Sanitize filename
               sanitized_filename=$(echo "$name" | tr -dc '[:alnum:]._-')
               sanitized_filename=$(echo "$sanitized_filename" | cut -c1-100)  # Limit to 100 characters
 
@@ -88,4 +83,3 @@ jobs:
           fi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # GitHub token for pushing changes
-
