--- a/.github/workflows/get-access-token.yml
+++ b/.github/workflows/get-access-token.yml
@@ -8,8 +8,6 @@ on:
 jobs:
   get_access_token:
     runs-on: ubuntu-latest
-    outputs:
-      access_token: ${{ steps.get_token.outputs.access_token }}  # Makes the access token available to other jobs
 
     steps:
       - name: Request Access Token
@@ -21,15 +19,19 @@ jobs:
 
           # Extract access token from response and handle errors
           access_token=$(echo "$response" | jq -r '.access_token')
+          echo "Access Token Length1: ${#access_token}"
           if [ -z "$access_token" ] || [ "$access_token" == "null" ]; then
             echo "Failed to retrieve access token. Full response: $response"
             exit 1
           fi
-          echo "::set-output name=access_token::$access_token"
+          
+          # Store the access token in the environment file
+          echo "access_token=$access_token" >> $GITHUB_ENV
 
   sync:
     runs-on: ubuntu-latest
-    needs: get_access_token  # Ensure this job waits for token retrieval
+    needs: get_access_token
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -38,7 +40,8 @@ jobs:
         id: fetch_images
         run: |
           # Use the access token retrieved from the previous job
-          access_token="${{ needs.get_access_token.outputs.access_token }}"
+          access_token="${{ env.access_token }}"
+          echo "Access Token Length2: ${#access_token}"
 
           # Fetch images from OneDrive using the access token
           response=$(curl -s -X GET "https://graph.microsoft.com/v1.0/users/998e6817-e81a-4c40-a387-34c1ab27b201/drive/items/01KWR5ZX2PEZYK2OZVPFFLVJGAPE4RYQEU/children" \
