--- a/.github/workflows/get-access-token.yml
+++ b/.github/workflows/get-access-token.yml
@@ -1,5 +1,4 @@
 name: Get Access Token and Sync OneDrive Images to GitHub
-
 on:
   workflow_dispatch:
   schedule:
@@ -8,7 +7,8 @@ on:
 jobs:
   get_access_token:
     runs-on: ubuntu-latest
-
+    outputs:
+      access_token: ${{ steps.set_token.outputs.access_token }}  # Define the output
     steps:
       - name: Request Access Token
         id: get_token
@@ -16,7 +16,6 @@ jobs:
           response=$(curl -X POST "https://login.microsoftonline.com/96f98c92-0eac-40be-80a7-9c8224a25a66/oauth2/v2.0/token" \
             -H "Content-Type: application/x-www-form-urlencoded" \
             -d "client_id=91597372-2261-4f87-9238-10af1457aeef&client_secret=ku.8Q~hgoBkxloBJC6ZVszUhFUleZWdQUmJibctx&scope=https://graph.microsoft.com/.default&grant_type=client_credentials")
-
           # Extract access token from response and handle errors
           access_token=$(echo "$response" | jq -r '.access_token')
           echo "Access Token Length1: ${#access_token}"
@@ -24,14 +23,16 @@ jobs:
             echo "Failed to retrieve access token. Full response: $response"
             exit 1
           fi
-          
-          # Store the access token in the environment file
-          echo "access_token=$access_token" >> $GITHUB_ENV
+          echo "access_token=$access_token" >> $GITHUB_OUTPUT  # Use GITHUB_OUTPUT instead of GITHUB_ENV
+
+      - name: Set Token Output
+        id: set_token
+        run: |
+          echo "access_token=${{ steps.get_token.outputs.access_token }}" >> $GITHUB_OUTPUT
 
   sync:
     runs-on: ubuntu-latest
     needs: get_access_token
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -39,32 +40,37 @@ jobs:
       - name: Fetch images from OneDrive
         id: fetch_images
         run: |
-          # Use the access token retrieved from the previous job
+          # Use the access token from the previous job's output
           access_token="${{ needs.get_access_token.outputs.access_token }}"
           echo "Access Token Length2: ${#access_token}"
-
+          
+          # Verify access token is not empty
+          if [ -z "$access_token" ]; then
+            echo "Access token is empty!"
+            exit 1
+          fi
+          
           # Fetch images from OneDrive using the access token
           response=$(curl -s -X GET "https://graph.microsoft.com/v1.0/users/998e6817-e81a-4c40-a387-34c1ab27b201/drive/items/01KWR5ZX2PEZYK2OZVPFFLVJGAPE4RYQEU/children" \
             -H "Authorization: Bearer $access_token")
-
           echo "$response" > response_log.txt  # Save response for debugging
-
+          
           # Parse image URLs and names
           urls=$(echo "$response" | jq -r '.value[] | select(.file) | .["@microsoft.graph.downloadUrl"] // empty')
           names=$(echo "$response" | jq -r '.value[] | select(.file) | .name // empty')
           echo "ALL names: $names"
           echo "ALL urls: $urls"
+          
           if [[ -z "$urls" || -z "$names" ]]; then
               echo "No images found or error in fetching images."
               exit 1
           fi
-
+          
           # Download images
           mkdir -p downloaded_images
           paste <(echo "$urls") <(echo "$names") | while IFS=$'\t' read -r url name; do
               sanitized_filename=$(echo "$name" | tr -dc '[:alnum:]._-')
               sanitized_filename=$(echo "$sanitized_filename" | cut -c1-100)  # Limit to 100 characters
-
               # Download the image
               if curl -L -o "downloaded_images/$sanitized_filename" "$url"; then
                   echo "Downloaded: $sanitized_filename"
