--- a/.github/workflows/get-access-token.yml
+++ b/.github/workflows/get-access-token.yml
@@ -8,7 +8,7 @@ jobs:
   get_access_token:
     runs-on: ubuntu-latest
     outputs:
-      access_token: ${{ steps.set_token.outputs.access_token }}  # Define the output
+      token: ${{ steps.get_token.outputs.token }}  # Simplified output name
     steps:
       - name: Request Access Token
         id: get_token
@@ -16,19 +16,18 @@ jobs:
           response=$(curl -X POST "https://login.microsoftonline.com/96f98c92-0eac-40be-80a7-9c8224a25a66/oauth2/v2.0/token" \
             -H "Content-Type: application/x-www-form-urlencoded" \
             -d "client_id=91597372-2261-4f87-9238-10af1457aeef&client_secret=ku.8Q~hgoBkxloBJC6ZVszUhFUleZWdQUmJibctx&scope=https://graph.microsoft.com/.default&grant_type=client_credentials")
+          
           # Extract access token from response and handle errors
           access_token=$(echo "$response" | jq -r '.access_token')
           echo "Access Token Length1: ${#access_token}"
+          
           if [ -z "$access_token" ] || [ "$access_token" == "null" ]; then
             echo "Failed to retrieve access token. Full response: $response"
             exit 1
           fi
-          echo "access_token=$access_token" >> $GITHUB_OUTPUT  # Use GITHUB_OUTPUT instead of GITHUB_ENV
-
-      - name: Set Token Output
-        id: set_token
-        run: |
-          echo "access_token=${{ steps.get_token.outputs.access_token }}" >> $GITHUB_OUTPUT
+          
+          # Set the output using the new syntax
+          echo "token=$access_token" >> "$GITHUB_OUTPUT"
 
   sync:
     runs-on: ubuntu-latest
@@ -41,7 +40,7 @@ jobs:
         id: fetch_images
         run: |
           # Use the access token from the previous job's output
-          access_token="${{ needs.get_access_token.outputs.access_token }}"
+          access_token='${{ needs.get_access_token.outputs.token }}'
           echo "Access Token Length2: ${#access_token}"
           
           # Verify access token is not empty
@@ -91,4 +90,4 @@ jobs:
               echo "No new images to add."
           fi
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # GitHub token for pushing changes
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
