--- a/.github/workflows/get-access-token.yml
+++ b/.github/workflows/get-access-token.yml
@@ -5,47 +5,25 @@ on:
     - cron: '0 11 * * 2,3'  # Runs every Tuesday and Wednesday at 11:00 AM UTC
 
 jobs:
-  get_access_token:
+  sync_images:
     runs-on: ubuntu-latest
-    outputs:
-      token: ${{ steps.get_token.outputs.token }}  # Simplified output name
-    steps:
-      - name: Request Access Token
-        id: get_token
-        run: |
-          response=$(curl -X POST "https://login.microsoftonline.com/96f98c92-0eac-40be-80a7-9c8224a25a66/oauth2/v2.0/token" \
-            -H "Content-Type: application/x-www-form-urlencoded" \
-            -d "client_id=91597372-2261-4f87-9238-10af1457aeef&client_secret=ku.8Q~hgoBkxloBJC6ZVszUhFUleZWdQUmJibctx&scope=https://graph.microsoft.com/.default&grant_type=client_credentials")
-          
-          # Extract access token from response and handle errors
-          access_token=$(echo "$response" | jq -r '.access_token')
-          echo "Access Token Length1: ${#access_token}"
-          
-          if [ -z "$access_token" ] || [ "$access_token" == "null" ]; then
-            echo "Failed to retrieve access token. Full response: $response"
-            exit 1
-          fi
-          
-          # Set the output using the new syntax
-          echo "token=$access_token" >> "$GITHUB_OUTPUT"
-
-  sync:
-    runs-on: ubuntu-latest
-    needs: get_access_token
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Fetch images from OneDrive
-        id: fetch_images
+      - name: Get Access Token and Sync Images
         run: |
-          # Use the access token from the previous job's output
-          access_token='${{ needs.get_access_token.outputs.token }}'
-          echo "Access Token Length2: ${#access_token}"
+          # Get access token
+          response=$(curl -X POST "https://login.microsoftonline.com/96f98c92-0eac-40be-80a7-9c8224a25a66/oauth2/v2.0/token" \
+            -H "Content-Type: application/x-www-form-urlencoded" \
+            -d "client_id=91597372-2261-4f87-9238-10af1457aeef&client_secret=ku.8Q~hgoBkxloBJC6ZVszUhFUleZWdQUmJibctx&scope=https://graph.microsoft.com/.default&grant_type=client_credentials")
           
-          # Verify access token is not empty
-          if [ -z "$access_token" ]; then
-            echo "Access token is empty!"
+          # Extract access token
+          access_token=$(echo "$response" | jq -r '.access_token')
+          echo "Access Token Length: ${#access_token}"
+          
+          if [ -z "$access_token" ] || [ "$access_token" == "null" ]; then
+            echo "Failed to retrieve access token. Full response: $response"
             exit 1
           fi
           
@@ -77,9 +55,8 @@ jobs:
                   echo "Failed to download: $url"
               fi
           done
-
-      - name: Commit images to GitHub
-        run: |
+          
+          # Configure git and commit changes
           git config --local user.name "biteam2024"
           git config --local user.email "bi.analytics@arthdesignbuild.com"
           if [ -n "$(ls -A downloaded_images)" ]; then
